--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Rock+Salt&family=Shadows+Into+Light&display=swap");
+@import "./styles/icons.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
